--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "mocha": "^3.1.0",
-    "nodemon": "^1.10.0"
+    "nodemon": "^1.10.0",
+    "supertest": "^2.0.0"
   }
 }
